--- a/StudentAttendance/Views/Shared/_Layout.cshtml
+++ b/StudentAttendance/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Students", "Index", "Students", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Lecturers", "Index", "Lecturers", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Enrollments", "Index", "Enrollments", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
