--- a/StudentAttendance/Views/Shared/_Layout.cshtml
+++ b/StudentAttendance/Views/Shared/_Layout.cshtml
@@ -25,6 +25,11 @@
                     <li>@Html.ActionLink("Lecturers", "Index", "Lecturers", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Enrollments", "Index", "Enrollments", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li><a href="~/Login.aspx">LogOut</a></li>
+
+
+
+
                 </ul>
             </div>
         </div>
